--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
 			<version>${elastic.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.huawei.storage</groupId>
+			<artifactId>esdk-obs-java</artifactId>
+			<version>3.20.6.1</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
 		<dependency>
 			<groupId>com.auth0</groupId>
